@@ -512,6 +512,7 @@ module TZInfo
       timezone 'Pacific/Apia'
       timezone 'Pacific/Auckland'
       timezone 'Pacific/Chatham'
+      timezone 'Pacific/Chuuk'
       timezone 'Pacific/Easter'
       timezone 'Pacific/Efate'
       timezone 'Pacific/Enderbury'
@@ -537,7 +538,8 @@ module TZInfo
       timezone 'Pacific/Pago_Pago'
       timezone 'Pacific/Palau'
       timezone 'Pacific/Pitcairn'
-      timezone 'Pacific/Ponape'
+      timezone 'Pacific/Pohnpei'
+      linked_timezone 'Pacific/Ponape'
       timezone 'Pacific/Port_Moresby'
       timezone 'Pacific/Rarotonga'
       timezone 'Pacific/Saipan'
@@ -545,7 +547,7 @@ module TZInfo
       timezone 'Pacific/Tahiti'
       timezone 'Pacific/Tarawa'
       timezone 'Pacific/Tongatapu'
-      timezone 'Pacific/Truk'
+      linked_timezone 'Pacific/Truk'
       timezone 'Pacific/Wake'
       timezone 'Pacific/Wallis'
       linked_timezone 'Pacific/Yap'
